fix imports, return immutable empty map